--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>  
 
-
+<div id="main-container">
     <div class="box"> <span class="task">Tasks</span> <span class="list">List</span> </div>
 
     <div id="box2">
@@ -22,6 +22,8 @@
     <button id="add_item">Add Item</button>
 </div>
 
+<div id="parent"></div>
+</div>
 
 <div id="main-container">
 <div class="container">
@@ -51,7 +53,6 @@
 
 
 
-    <div id="parent"></div>
     
 
    
